reducing sonar complaints